@@ -500,7 +500,7 @@ FUNTAB flist[] = {
   {"LPARENT", fun_lparent, 1, 1, FN_REG},
   {"LPIDS", fun_lpids, 0, 2, FN_REG},
   {"LPLAYERS", fun_dbwalker, 1, 1, FN_REG},
-  {"LPORTS", fun_lports, 0, 1, FN_REG},
+  {"LPORTS", fun_lports, 0, 2, FN_REG},
   {"LPOS", fun_lpos, 2, 2, FN_REG},
   {"LSEARCH", fun_lsearch, 1, INT_MAX, FN_REG},
   {"LSEARCHR", fun_lsearch, 1, INT_MAX, FN_REG},
@@ -513,7 +513,7 @@ FUNTAB flist[] = {
   {"LVEXITS", fun_dbwalker, 1, 1, FN_REG},
   {"LVPLAYERS", fun_dbwalker, 1, 1, FN_REG},
   {"LVTHINGS", fun_dbwalker, 1, 1, FN_REG},
-  {"LWHO", fun_lwho, 0, 1, FN_REG},
+  {"LWHO", fun_lwho, 0, 2, FN_REG},
   {"LWHOID", fun_lwho, 0, 1, FN_REG},
   {"MAIL", fun_mail, 0, 2, FN_REG},
   {"MAILFROM", fun_mailfrom, 1, 2, FN_REG},
