@@ -46,6 +46,8 @@ Functions:
     by Paige@M*U*S*H. [MG]
   * pemit(<port number>, <message>) sends <message> to the specified
     port, like @pemit/port. Suggested by Mercutio. [MG]
+  * lports() and lwho() take an optional second argument to include
+    connections at the login screen. Suggested by Mercutio. [MG]
 
 Fixes:
  * lsearch() with invalid syntax was failing to report it as such, causing
